Fri May 19 07:47:13 BST 2006  Olly Betts <olly@survex.com>

	* bin/xapian-compact.cc: Add --blocksize option to allow the blocksize
	  to be set (default is 8K as before.)

Thu May 18 11:24:17 BST 2006  Olly Betts <olly@survex.com>

	* api/vectortermlist.h: Whitespace tweak.

Tue May 16 10:09:53 BST 2006  Olly Betts <olly@survex.com>

	* HACKING: Update details of the debian stable backport version
	  numbering scheme.

Tue May 16 06:55:14 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Remove unused variable from snprintf testing code.

Tue May 16 04:32:34 BST 2006  Olly Betts <olly@survex.com>

	* HACKING: Expand on the debian package building checklist.

Tue May 16 04:32:07 BST 2006  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Note that "set_sort_by_relevance" is the
	  default setting.

Mon May 15 06:59:01 BST 2006  Olly Betts <olly@survex.com>

	* HACKING: Update debian package building checklist.

Mon May 15 03:53:53 BST 2006  Olly Betts <olly@survex.com>

	* PLATFORMS: Update one more result before the actual release.

Mon May 15 02:15:18 BST 2006  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Updated for 0.9.6.

Mon May 15 01:35:33 BST 2006  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated in preparation for the next release.

Sun May 14 19:05:37 BST 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_lock.h: Added workaround for newlib header bug.

Sat May 13 07:04:14 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Fix snprintf tests.

Sat May 13 04:52:53 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Tweak version.h generation to cope with CXXCPP putting
	  carriage returns into its output as can happen on cygwin.

Fri May 12 21:49:33 BST 2006  Olly Betts <olly@survex.com>

	* HACKING: Update with the libtool patches we're now using.

Fri May 12 21:43:02 BST 2006  Olly Betts <olly@survex.com>

	* include/xapian/version_h.cc: Trim trailing whitespace.
